# SpotifySongsSimilarity

./: README.md
client/: package.json  pnpm-lock.yaml  vite.config.ts
client/src/app/: App.css  App.tsx
client/src/app/providers/: providers.tsx
client/src/app/routes/: appRouter.tsx
client/src/entities/nodes/: index.ts
client/src/entities/nodes/model/: model.ts
client/src/pages/map-of-spotify/: index.ts
client/src/pages/map-of-spotify/ui/: MapOfSpotifyPage.tsx
client/src/shared/assets/json/: nodes.json
client/src/shared/types/: error.ts  index.ts  node.ts
client/src/shared/ui/camera/: camera.tsx  index.ts
client/src/shared/ui/fallback/: fallback.module.scss  fallback.tsx
client/src/shared/ui/header/: header.module.scss  header.tsx
similarity-metrics-service/: pyproject.toml
similarity-metrics-service/similarity_metrics_service/: __init__.py  constants.py  main.py  utils.py
similarity-metrics-service/similarity_metrics_service/output/: nodes.json
