[tool.poetry]
name = "similarity-metrics-service"
version = "0.1.0"
description = ""
authors = ["shamil <toshamilgis@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"
scikit-learn = "^1.5.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
